Add GitHub Pages demo site